Payment fix, global fixing errors in business logic, moved files, changed tables in liquibase, added encryption to attributes